--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button defaultHref="home"></ion-back-button>
+      </ion-buttons>
+      <ion-title>
+        Prueba de consultás asíncronas
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-back-button defaultHref="home"></ion-back-button>
+        </ion-buttons>
+        <ion-title size="large">Prueba de consultás asíncronas</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+      <ion-router-outlet></ion-router-outlet>
+
+  </ion-content>
 </ion-app>
