--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,15 @@
-#container {
+h3 {
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+section {
+  max-width: 70%;
+  margin-left: 15%;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-button {
+  max-width: 50%;
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
