--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,5 +25,8 @@
     </article>
 
   </section>
+  <section>
+    <ion-button [routerLink]="['/formulario']">Prueba formulario</ion-button>
+  </section>
 </div>
 
