--- a/src/app/restore-password/restore-password.component.html
+++ b/src/app/restore-password/restore-password.component.html
@@ -3,7 +3,7 @@
     <ion-buttons>
       <ion-back-button defaultHref="/login"></ion-back-button>
    </ion-buttons>
-    <ion-title>Registrar</ion-title>
+    <ion-title>Restablecer contraseña</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,6 +13,6 @@
       <ion-label position="floating">Email</ion-label>
       <ion-input type="email" #txtNickname></ion-input>
     </ion-item>
-    <ion-button type="button" expand="block" (click)="restorePassword(txtNickname.value)">Registrar</ion-button>
+    <ion-button type="button" expand="block" (click)="restorePassword(txtNickname.value)">Enviar</ion-button>
   </div>
 </ion-content>
