--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,29 @@
 #container a {
   text-decoration: none;
 }
+
+.tweet-info {
+  font-size: 0.9em;
+}
+
+.name {
+  font-weight: 600;
+}
+
+.handle {
+  padding-left: 4px;
+  color: var(--ion-color-medium);
+}
+
+.wrapper {
+  border-bottom: 1px solid var(--ion-color-light);
+}
+
+.highlight {
+  color: var(--ion-color-primary);
+}
+
+.preview-img {
+  border: 1px solid var(--ion-color-light);
+  border-radius: 10px;
+}
