--- a/src/app/UI/alta-evento/alta-evento.page.html
+++ b/src/app/UI/alta-evento/alta-evento.page.html
@@ -15,7 +15,7 @@
       <ion-col size="4" size-md="2">
         <ion-label>Ubicación</ion-label>
       </ion-col>
-      <ion-col size="8" size-md="5" size-lg="3">
+      <ion-col id="mapa" size="8" size-md="5" size-lg="3">
         <app-mapa [componente]="'altaEvento'" (ubicacion)="marcarUbicacion($event)"></app-mapa>
       </ion-col>
     </ion-row>
@@ -24,7 +24,7 @@
         <ion-label>Descripción</ion-label>
       </ion-col>
       <ion-col size="8" size-md="5" size-lg="3">
-        <ion-textarea [(ngModel)]="evento.descripcion" placeholder="Descripción" autoGrow="true" rows="4" maxLength="500" >
+        <ion-textarea rows="4" autoGrow="true" [(ngModel)]="evento.descripcion" placeholder="Descripción">
         </ion-textarea>
       </ion-col>
     </ion-row>
@@ -50,6 +50,12 @@
       </ion-col>
       <ion-col class="datepicker-icon" size="1" size-md="1" size-lg="1">
         <ion-icon name="calendar-outline" size="large" (click)="pickerFin.open()"></ion-icon>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2"></ion-col>
+      <ion-col size="8">
+        <ion-button expand="block" color="primary" [disabled]="validated" (click)="submit()">Aceptar</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
