--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>   
-    <ion-buttons slot="start">     
-      <ion-back-button></ion-back-button>   
-    </ion-buttons>  
-    <ion-title>Back Button</ion-title> 
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Back Button</ion-title>
+    <ion-button type="button" style="display: block;" fill="outline" (click)="onLogout()">logout test</ion-button>
   </ion-toolbar>
 </ion-header>
