--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,44 +1,64 @@
 
 <ion-content>
-  <ion-grid style="padding: 0%;">
-    <ion-row>
-      <ion-col size="8" style="padding: 0%;">
-        <div>
-          <ion-img src="../../assets/img/login.jpg"></ion-img>
-        </div>
-      </ion-col>
-      <ion-col size="4">
-        <div>
-          <ion-card>
-            <ion-card-content>
-              <ion-card-title>Travel Pack</ion-card-title>
-              <ion-list class="form-input">
-                <ion-item>
-                  <ion-input type="email" placeholder="Email" #txtNickname></ion-input>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid style="padding: 0%;">
+      <ion-row>
+        <ion-col size="8" style="padding: 0%;">
+          <div>
+            <ion-img src="../../assets/img/login.jpg"></ion-img>
+          </div>
+        </ion-col>
+        <ion-col size="4">
+          <div>
+            <ion-card>
+              <ion-card-content>
+                <ion-card-title>Travel Pack</ion-card-title>
+                <ion-list class="form-input">
+                  <ion-item>
+                    <ion-label position="floating" >Correo</ion-label>
+                    <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+                  </ion-item>
+                  <ion-item
+                  *ngIf="!emailCtrl.valid && emailCtrl.touched"
+                  lines="none"
+                >
+                  <ion-label>
+                    Debe de ser un correo valido.
+                  </ion-label>
                 </ion-item>
-                <ion-item>
-                  <ion-input type="password" placeholder="Contraseña" #txtPassphrase></ion-input>
+                  <ion-item>
+                    <ion-label position="floating" >Contraseña</ion-label>
+                    <ion-input type="password" ngModel required minlength="6" name="password" #passwordCtrl="ngModel"></ion-input>
+                  </ion-item>
+                  <ion-item
+                  *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
+                  lines="none"
+                >
+                  <ion-label>
+                    Debe de contener al menos 6 caracteres.
+                  </ion-label>
                 </ion-item>
-                <ion-row>
-                  <ion-col>
-                    <ion-button fill="outline" href="/perfil">
-                      Login
-                    </ion-button>
-                  </ion-col>
-                  <ion-col>
-                    <ion-button fill="outline" href="/registro">
-                      Registro
-                    </ion-button>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-label>¿Olvidaste tu contraseña?</ion-label>
-                </ion-row>
-              </ion-list>
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <ion-button fill="outline" type= "submit" [disabled]="!f.valid">
+                        Login
+                      </ion-button>
+                    </ion-col>
+                    <ion-col>
+                      <ion-button fill="outline" href="/registro">
+                        Registro
+                      </ion-button>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-label>¿Olvidaste tu contraseña?</ion-label>
+                  </ion-row>
+                </ion-list>
+              </ion-card-content>
+            </ion-card>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
