--- a/src/app/UI/navbar/navbar.component.scss
+++ b/src/app/UI/navbar/navbar.component.scss
@@ -1,6 +1,14 @@
-
 .iconosPublicacion {
   height: 0.7cm;
   width: 0.7cm;
   margin-top: 20px;
+}
+
+ion-searchbar {
+  padding-left: 20rem;
+  padding-right: 50rem;
+}
+
+ion-buttons {
+  padding-right: 50px;
 }
