Arreglo luego de marge Alejandro

--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -18,6 +18,7 @@
     </ion-row>
   </ion-grid>
 
+
   <div class="ion-padding">
     <span class="section-title">Galeria</span>
     <ion-slides>
@@ -31,13 +32,14 @@
     </ion-slides>
   </div>
 
-<ion-grid fixed>
-  <ion-row>
-    <ion-col size="4"></ion-col>
-    <ion-col size="4"><app-feed></app-feed></ion-col>
-    <ion-col size="4"></ion-col>
-  </ion-row>
-</ion-grid>
-
+  <h1>Publicaciones</h1>
+  
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="4"></ion-col>
+      <ion-col size="4"><app-feed></app-feed></ion-col>
+      <ion-col size="4"></ion-col>
+    </ion-row>
+  </ion-grid>
   
 </ion-content>
