--- a/src/global.scss
+++ b/src/global.scss
@@ -29,7 +29,8 @@
 .ion-buttons {
   margin: auto;
 flex-basis: 50px;
-=======
+}
+
 .confirmacion-modal .modal-wrapper {
   height: 20%;
   top: 80%;
