--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+    <ion-header>
+        <ion-grid>
+            <ion-row>
+                <ion-col offset=4 size=4>
+                    <div style="position: relative">
+                        <ion-searchbar color="primary" (ionInput)="search($event)" [value]="selectedAddress" animated></ion-searchbar>
+                        <div style="position: absolute; widht:100%; z-index: 999;">
+                            <ion-list lines="none" *ngIf="addresses.length > 0">
+                                <ion-item button *ngFor="let address of addresses" (click)="onSelect(address)">
+                                    <ion-icon name="pin"></ion-icon>
+                                    {{ address }}
+                                </ion-item>
+                            </ion-list>
+                        </div>
+                    </div>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-header>
+    <div id="mapa-mapbox"></div>
 </ion-content>
