--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,11 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+#mapa-mapbox{
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+  overflow: hidden;
 }
+.mapboxgl-canvas-mapa-mapbox {
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+  height: 100vh;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
 }
