--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -4,8 +4,10 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Back Button</ion-title>
-    <ion-button type="button" style="display: block;" fill="outline" (click)="onLogout()">logout test</ion-button>
-      <ion-item>
+
+    <!--<ion-button type="button" style="display: block;" fill="outline" (click)="onLogout()">logout test</ion-button> -->
+    <ion-buttons slot="end">
+    <ion-item>
         <ion-avatar>
           <img src="../../../assets/icon/Logo.png">
         </ion-avatar>
