--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" [routerLink]="['/home']" class="pointer">
       <ion-item>
         <ion-avatar>
           <img src="../../../assets/icon/Logo.png">
