--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -86,7 +86,7 @@
       </ion-col>
       <ion-col size="2">
         <ion-button expand="block" fill="clear" color="primary" [disabled]="newMsg === '' && mediaUrl === ''"
-          class="msg-btn" (click)="sendMessage()">
+          class="msg-btn" (click)="enviarMessage()">
           <ion-icon name="send" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
