--- a/src/global.scss
+++ b/src/global.scss
@@ -25,15 +25,4 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-
-.ion-buttons {
-  margin: auto;
-flex-basis: 50px;
-}
-
-.confirmacion-modal .modal-wrapper {
-  height: 20%;
-  top: 80%;
-  position: absolute;
-  display: block;
-}
+@import "./app.scss";
