--- a/src/app/UI/mapa/mapa.component.html
+++ b/src/app/UI/mapa/mapa.component.html
@@ -1,4 +1,7 @@
+<div id="mapa-container">
 
-<div (click)="setUbicacion()">
-  <ion-img src="https://www.google.com/maps/vt/data=mfmc8r9I3GzGB5m_ahqPagYY-PWpSnZAtxG14QTc9P4f7bjg4p-oa7Z50Uq7_rfLzCseKIIhktYKYkqAHEE-csToyu2sfnb-IZfk43SbEsxrEGlQqLHvwwBX1u-P6ixWBwxYfa9ce_p3-ij1DBcjbMoxFNbywzox2lFJidnpEWkpOT_SIg92TZUvC2NV0Ddgfvt0Ldvg_FVof7v-q6tAAAEj08mMmIgBIcAyV4fVkv4N92k"></ion-img>
 </div>
+
+<!--<div (click)="setUbicacion()">
+  <ion-img src="https://www.google.com/maps/vt/data=mfmc8r9I3GzGB5m_ahqPagYY-PWpSnZAtxG14QTc9P4f7bjg4p-oa7Z50Uq7_rfLzCseKIIhktYKYkqAHEE-csToyu2sfnb-IZfk43SbEsxrEGlQqLHvwwBX1u-P6ixWBwxYfa9ce_p3-ij1DBcjbMoxFNbywzox2lFJidnpEWkpOT_SIg92TZUvC2NV0Ddgfvt0Ldvg_FVof7v-q6tAAAEj08mMmIgBIcAyV4fVkv4N92k"></ion-img>
+</div>-->
