--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -15,22 +15,27 @@
                 <ion-item>
                   <!-- <ion-input type="text" placeholder="Nombre" #txtNombre></ion-input> -->
                   <ion-label position="floating">Nombre</ion-label>
-                  <ion-input type="text" name="nombre" #txtNombre></ion-input>
+                  <ion-input type="text" ngModel name="nombre" #txtNombre></ion-input>
                 </ion-item>
                 <ion-item>
                 <!-- <ion-input type="text" placeholder="Apellido" #txtApellido></ion-input> -->
                 <ion-label position="floating">Apellido</ion-label>
-                <ion-input type="text" name="apellido" #txtApellido></ion-input>
+                <ion-input type="text" ngModel name="apellido" #txtApellido></ion-input>
                 </ion-item>
                 <ion-item>
                   <!-- <ion-input type="text" placeholder="Direccion" #txtDireccion></ion-input> -->
                   <ion-label position="floating">Direccion</ion-label>
-                  <ion-input type="text" name="direccion" #txtDireccion></ion-input>
+                  <ion-input type="text" ngModel name="direccion" #txtDireccion></ion-input>
+                </ion-item>
+                <ion-item>
+                  <!-- <ion-input type="text" placeholder="Direccion" #txtDireccion></ion-input> -->
+                  <ion-label position="floating">Celular</ion-label>
+                  <ion-input type="text" ngModel name="celular" #txtCelular></ion-input>
                 </ion-item>
                 <ion-item>
                   <!-- <ion-input type="text" placeholder="Nickname" #txtNickname></ion-input> -->
                   <ion-label position="floating">Nickname</ion-label>
-                  <ion-input type="text" name="nickname" #txtNickname></ion-input>
+                  <ion-input type="text" ngModel name="nickname" #txtNickname></ion-input>
                 </ion-item>
                 <ion-item>
                   <!-- <ion-input type="password" placeholder="Contraseña" #txtPass></ion-input> -->
