--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,10 +27,7 @@
             <ion-label class="underline" (click)="onShowAllSuggested()">Ver todas</ion-label>
           </ion-col>
         </ion-row>
-        <ion-item style="display: inline; padding: 5px;">
-          <ion-avatar>
-            <img src="../../assets/189-1896573_male-shadow-fill-circle-comments-question-mark-flat.png">
-          </ion-avatar>
+        <ion-item style="display: inline; padding: 5px;" *ngFor="let sugerenciaAmigo of sugerenciaAmigos">
           <ion-avatar>
             <img src="../../assets/189-1896573_male-shadow-fill-circle-comments-question-mark-flat.png">
           </ion-avatar>
