Ajustes en chat y componente Mapa

--- a/src/app/UI/mapa/mapa.component.scss
+++ b/src/app/UI/mapa/mapa.component.scss
@@ -1,4 +1,5 @@
 @import "https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css";
+@import "https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css";
 
 #mapa-container{
   min-width: 100px;
