--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,13 @@
 
 <app-navbar></app-navbar>
 <ion-content class="ion-padding">
-  <ion-grid>
+  <ion-grid fixed>
     <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-item>
-          <ion-textarea placeholder="En que estas pensando?" position="floating" rows="4"></ion-textarea>
-        </ion-item>
+      <ion-col size="3"></ion-col>
+      <ion-col size="6">
+        <app-alta-publicacion></app-alta-publicacion>
       </ion-col>
-      <ion-col>
+      <ion-col size="3">
         <div>
           GRUPO 1
         </div>
@@ -30,18 +29,5 @@
         </ion-item>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item class="iconosPubPadre">
-          <img src="../../assets/icon/link-outline.svg" class="iconosPublicacion" onclick="">
-          <img src="../../assets/icon/location-outline.svg" class="iconosPublicacion">
-          <img src="../../assets/icon/image-outline.svg" class="iconosPublicacion">
-          <ion-button type="submit" (click)="onPublicar()">
-            Publicar
-          </ion-button>
-        </ion-item>
-      </ion-col>
-    </ion-row>
   </ion-grid>
-  
 </ion-content>
