--- a/src/app/UI/interes/interes.page.html
+++ b/src/app/UI/interes/interes.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size-md="8" offset-md="2">
+      <ion-col size-md="10" size-xs="12" offset-md="1">
         <ion-card>
           <ion-card-header color=tertiary>
             <ion-card-title  class="ion-text-center">Intereses</ion-card-title>
