--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -7,25 +7,9 @@
             <ion-card-title  class="ion-text-center">Intereses</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-item>
-              <ion-label position="floating">Nombre del interés</ion-label>
-              <ion-input type="text" id="input-reason" [(ngModel)]="interes.interes" placeholder="Ej: Deportes al aire libre"></ion-input>
-            </ion-item>
-            <div  class="ion-margin-vertical ion-text-right">
-                <ion-button class="item-end" id="btn-confirm" [disabled]="interes.interes===''" (click)=onCreateInteres()> 
-                  <ion-icon slot="start" name="add"></ion-icon>Añadir interés</ion-button>
-            </div>
-            <div >
-              <ion-item color="danger" (click)="showError=false" [hidden]="showError===false" >
-                <ion-label >Ese nombre de interés ya existe. </ion-label>
-                <ion-button color="light" float="left" fill="clear" >
-                  <ion-icon color="light" float="left"  name="close" slot="icon-only" ></ion-icon>
-                </ion-button>
-              </ion-item>
-            </div>
             <ion-item-divider>
               <ion-label>
-                Lista de intereses:
+                Lista de ubicaciones:
               </ion-label>
             </ion-item-divider>
             <ion-list>
