--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -4,7 +4,7 @@
       <ion-col size-xs="12" size-md="10" offset-md="1">
         <ion-card>
           <ion-card-header color=tertiary>
-            <ion-card-title  class="ion-text-center">Intereses</ion-card-title>
+            <ion-card-title  class="ion-text-center">Mis Ubicaciones</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-item-divider>
