arreglar error de geolocation
se añadio

"@mapbox/mapbox-gl-geocoder": "^4.7.1",

y se hizo npm install

--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -13,7 +13,7 @@
               </ion-label>
             </ion-item-divider>
             <ion-col id="mapa" size="8" size-md="5" size-lg="3">
-              <app-mapa [componente]="'altaEvento'" [currentLocation]="true" [ubicaciones]="ubicaciones" [ubiCentral]="ubicacion" [marcarUbicacion]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
+              <app-mapa [currentLocation]="true" [ubicaciones]="ubicaciones" [ubiCentral]="ubicacion" [marcarUbicacion]="false"></app-mapa>
             </ion-col>
           </ion-card-content>
         </ion-card>
