--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -13,7 +13,7 @@
     </ion-row>
     <ion-row>
       <ion-col style="text-align: center;" size="12">
-        <ion-label>Pepe Montaña</ion-label>
+        <ion-label>{{perfil?.usuario.nombre+' '+ perfil?.usuario.apellido}}</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -37,7 +37,7 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="4"></ion-col>
-      <ion-col size="4"><app-feed></app-feed></ion-col>
+      <ion-col size="4"><app-feed [publicaciones] = "publicaciones"></app-feed></ion-col>
       <ion-col size="4"></ion-col>
     </ion-row>
   </ion-grid>
