--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -15,7 +15,7 @@
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <div><ion-label>{{ this.publicaciones.value.length > 0 ? this.publicaciones.value[0].nombre : '' }}</ion-label></div>
+          <div><ion-label>{{ publicacion.nombre }}</ion-label></div>
           
           <!-- <img class="preview-img" src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
         </ion-col>
