Agregada la imagen en el registro

--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -13,3 +13,15 @@ ion-card-title{
     font-weight: bold;
     text-transform: uppercase;
 }
+
+#foto
+{
+  border-radius: 50%;
+  width: 50%;
+  height: 50%;
+  margin-left: 25%;
+}
+#imageAdd
+{
+  margin-left: 22%;
+}
