--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -8,3 +8,9 @@
     height: 120px;
     padding-right: 5px;
   }
+
+  .avatar {
+    margin-left: auto; 
+    height: 150px;
+    width: 150px;
+    }
