--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -8,16 +8,25 @@
     <ion-col size="10">
       <ion-row class="tweet-info">
         <ion-col size="12">
-          <span class="name">Pepe Montaña</span>
-          <span class="handle">@pepeM</span>
-          <!-- <span class="handle">- {{ tweet.date*1000 | date: 'shortDate' }}</span> -->
+          <span class="name">{{this.usuario.value.nombre +" "+ this.usuario.value.apellido}}</span>
+          <br>
+          <span class="handle">@{{this.usuario.value.nickname}}</span>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <div><ion-label>{{ publicacion.nombre }}</ion-label></div>
-          
-          <!-- <img class="preview-img" src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
+          <div *ngIf="publicacion.tipo.tipo === 'texto'">
+            <ion-label>{{ publicacion.contenido }}</ion-label>
+          </div>
+          <div *ngIf="publicacion.tipo.tipo === 'foto'">
+            <img id="foto" src="{{publicacion.contenido}}">
+          </div>
+          <div *ngIf="publicacion.tipo.tipo === 'mapa'">
+            <app-pub-mapa-ee [publicacion] = "publicacion"></app-pub-mapa-ee>
+          </div>
+          <div *ngIf="publicacion.tipo.tipo === 'enlaceExterno'">
+            <app-pub-mapa-ee [publicacion] = "publicacion"></app-pub-mapa-ee>
+          </div>
         </ion-col>
       </ion-row>
       <ion-row class="ion-justify-content-start">
@@ -44,3 +53,7 @@
     </ion-col>
   </ion-row>
 </div>
+
+<!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+  <ion-infinite-scroll-content></ion-infinite-scroll-content>
+</ion-infinite-scroll> -->
