--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -3,17 +3,25 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="12">
+      <ion-col sizeMd="4" sizeSm="12" style="padding-right: 2rem;">
         <div>
-          <ion-avatar style="margin: auto;">
+          <ion-avatar class="avatar">
             <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
           </ion-avatar>
         </div>
       </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col style="text-align: center;" size="12">
+      <ion-col sizeMd="4">
         <ion-label>{{perfil?.usuario.nombre+' '+ perfil?.usuario.apellido}}</ion-label>
+        <br>
+        <ion-label style="color: var(--ion-color-medium);">@{{perfil?.usuario.nickname}}</ion-label>
+        <br>
+        <ion-label style="font: bold;">30 </ion-label>
+        <ion-label>Contactos</ion-label>
+        <br>
+        <ion-label>Pais: Uruguay</ion-label>
+      </ion-col>
+      <ion-col sizeMd="4">
+        <app-medalla [medalla] = "medalla"></app-medalla>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -36,9 +44,11 @@
   
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="4"></ion-col>
-      <ion-col size="4"><app-feed [publicaciones] = "publicaciones"></app-feed></ion-col>
-      <ion-col size="4"></ion-col>
+      <ion-col offset-md="4" sizeMd="4" sizeSm="12"><app-feed 
+        [publicaciones] = "publicaciones"
+        [usuario] = "usuario"
+        ></app-feed>
+      </ion-col>
     </ion-row>
   </ion-grid>
   
