listar usuarios registrados hecho sin css

--- a/src/app/UI/navbar/navbar.component.scss
+++ b/src/app/UI/navbar/navbar.component.scss
@@ -4,3 +4,12 @@
   margin-top: 20px;
 }
 
+.listaUsuarios{
+ position: absolute;
+ max-height: 250px;
+ width: 85% !important;
+}
+
+.scroll{
+  overflow-y: scroll;
+}
