--- a/src/app/interes/interes.page.html
+++ b/src/app/interes/interes.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size-md="6" offset-md="3">
+      <ion-col size-md="8" offset-md="2">
         <ion-card>
           <ion-card-header color=tertiary>
             <ion-card-title  class="ion-text-center">Intereses</ion-card-title>
@@ -17,7 +17,7 @@
             </div>
             <div >
               <ion-item color="danger" (click)="showError=false" [hidden]="showError===false" >
-                <ion-label >Ese nombre de interés ya existe. </ion-label>
+                <ion-label > {{ errorMessage }} </ion-label>
                 <ion-button color="light" float="left" fill="clear" >
                   <ion-icon color="light" float="left"  name="close" slot="icon-only" ></ion-icon>
                 </ion-button>
@@ -37,7 +37,6 @@
                 <ion-button (click)="onDeleteInteres(inte.idInteres)">
                   <ion-icon name="trash" slot="icon-only" ></ion-icon>
                 </ion-button>
-                
               </ion-item>
             </ion-list>
           </ion-card-content>
