--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       </ion-avatar>
     </ion-buttons>
 
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" [routerLink]="['/alta-administrador']">
       <ion-avatar>
         <img src="../../../assets/icon/notifications-outline.svg" class="iconosPublicacion">
       </ion-avatar>
