registro admin terminado

--- a/src/app/alta-administrador/alta-administrador.page.html
+++ b/src/app/alta-administrador/alta-administrador.page.html
@@ -5,7 +5,7 @@
         <ion-col size-xs="12" size-md="10" offset-md="1">
           <ion-card>
             <ion-card-content>
-              <ion-card-title>Travel Pack</ion-card-title>
+              <ion-card-title>Registrar administrador</ion-card-title>
 
               <ion-list class="form-input">
                 <ion-item>
@@ -47,7 +47,7 @@
                 <ion-row>
                   <ion-col>
                     <ion-button type="submit" style="display: block;" fill="outline" [disabled]="!f.valid">
-                      Registrarme
+                      Registrar
                     </ion-button>
                   </ion-col>
                 </ion-row>
