--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       </ion-item>
     </ion-buttons>
     <ion-searchbar slot="primary" showCancelButton="focus"></ion-searchbar>
-    <ion-buttons slot="end" (click)="onLogout()">
+    <ion-buttons slot="end" routerLink="/perfil/{{datoUsuario.userId}}">
       <ion-avatar>
         <img src="../../../assets/icon/1024px-User-avatar.svg.png" class="iconosPublicacion">
       </ion-avatar>
