--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -27,7 +27,7 @@
       </ion-avatar>
     </ion-buttons>
 
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" [routerLink]="['/mod-administrador']">
       <ion-avatar>
         <img src="../../../assets/icon/caret-down-outline.svg" class="iconosPublicacion">
       </ion-avatar>
