--- a/src/app/alta-evento/alta-evento.page.scss
+++ b/src/app/alta-evento/alta-evento.page.scss
@@ -1,5 +1,5 @@
 ion-content > ion-grid, h1 {
-  padding: 20px !important;
+  padding: 20px 20px 0 20px !important;
 }
 
 ion-input, ion-textarea, ion-img {
