--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -1,7 +1,15 @@
-<app-navbar></app-navbar>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button icon="chevron-back-outline" class="pointer" text=""></ion-back-button>
+    </ion-buttons>
+
+    <ion-title>Alta Evento</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 
 <ion-content>
-  <h1>Alta Evento</h1>
   <ion-grid>
     <ion-row>
       <ion-col size="4" size-md="2" size-xs="12">
