estadistica line chart a cambiar por barChart

--- a/src/app/estadisticas/estadisticas.page.html
+++ b/src/app/estadisticas/estadisticas.page.html
@@ -1,5 +1,3 @@
-<app-navbar></app-navbar>
-
 <ion-content>
   <ion-card class="welcome-card" >
     <ion-card-header>
@@ -13,7 +11,7 @@
 
   <ion-card class="welcome-card">
     <ion-card-header>
-      Line Chart
+      Cantidad de usuarios por Medalla
     </ion-card-header>
     <ion-card-content>
       <canvas #lineCanvas style="position: relative; height:20vh; width:40vw"></canvas>
