--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -6,8 +6,8 @@
       <ion-card-title  class="ion-text-center">Mis Ubicaciones</ion-card-title>
     </ion-card-header>
     <ion-row id="mapa">
-        <app-mapa id="mapa" [currentLocation]="true" [ubicaciones]="ubicaciones" [ubiCentral]="ubicacion" [marcarUbicacion]="false"></app-mapa>
+        <app-mapa id="mapa" [currentLocation]="true" [ubicaciones]="ubicaciones" [marcarUbicacion]="false"></app-mapa>
     </ion-row>
 </ion-grid>
-  
-</ion-content>         
+
+</ion-content>
