--- a/src/app/UI/feed/pub-mapa-ee/pub-mapa-ee.component.html
+++ b/src/app/UI/feed/pub-mapa-ee/pub-mapa-ee.component.html
@@ -6,4 +6,4 @@
   <ion-card-content [innerHtml]="preview.description"></ion-card-content>
 </ion-card>
 
-<div id="mapa-mapbox"></div>
+<!-- <div id="mapa-mapbox"></div> -->
