--- a/src/app/estadisticas/estadisticas.page.html
+++ b/src/app/estadisticas/estadisticas.page.html
@@ -18,6 +18,15 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-card class="welcome-card">
+    <ion-card-header>
+      Cantidad de usuarios por Medalla
+    </ion-card-header>
+    <ion-card-content>
+      <canvas #barCanvas></canvas>
+    </ion-card-content>
+  </ion-card>
+
   <ion-card>
     <ion-card-header>
       Usuarios Por Paises
