--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -13,8 +13,8 @@
         </ion-buttons>
        <ion-searchbar  class="listaUsuarios" autocomplete="on" (click)="dontShow=false" placeholder="Buscar usuarios registrados" slot="primary" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
         <ion-buttons slot="end" (click)="onLogout()">
-          <ion-avatar>
-            <img src="../../../assets/icon/1024px-User-avatar.svg.png" class="iconosPublicacion">
+          <ion-avatar style="display: flex; justify-content: center; align-items: center; ">
+            <img style="height: 40px; width: 40px; margin:0px" [src]="userImage" class="iconosPublicacion">
           </ion-avatar>
         </ion-buttons>
         <ion-buttons slot="end" [routerLink]="['../interes']">
