--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item lines="none" routerLink="./listar-contactos">
+          <ion-item lines="none" routerLink="./intereses-usuario-comun">
             <ion-icon name="earth-outline" slot="start"></ion-icon>
             <ion-label>Listar intereses</ion-label>
           </ion-item>
