--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -1,20 +1,29 @@
 <ion-content>
+
   <ion-grid>
     <ion-row>
-      <ion-col size-md="8" size-xs="12"  offset-md="2">
-        <ion-list *ngFor="let config of configuraciones">
-            <ion-item>
+      <ion-col size-sm="6" size-xs="12"  offset-sm="3">
+        <ion-card>
+          <ion-card-header color=tertiary>
+            <ion-card-title  class="ion-text-center">Configuracion de Notificaciones</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item-divider>
               <ion-label>
-                <h5>{{config}}</h5>
+                Lista de configuraciones:
               </ion-label>
-              <ion-checkbox item-right checked={{config}}></ion-checkbox>
+            </ion-item-divider>
+            <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
+              <ion-item>
+                <ion-label> {{ config.key }} </ion-label>
+                <ion-checkbox place-right [(ngModel)]="config.value" (click)="checkedChanged(config.key, config.value)"></ion-checkbox>
+              </ion-item>
+            </ion-list>
+            <ion-item>
+              <ion-button slot="end" (click)="onAplicar()">APLICAR</ion-button>
             </ion-item>
-            <!-- <ion-item-options>
-              <ion-item-option color="danger" (click)="onBloquearUsuario(usuario.idPersona, slidingUser)">
-                <ion-icon name="lock-closed-sharp" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options> -->
-        </ion-list>
+          </ion-card-content>
+        </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
