--- a/src/app/estadisticas/estadisticas.page.html
+++ b/src/app/estadisticas/estadisticas.page.html
@@ -11,7 +11,7 @@
 
   <ion-card class="welcome-card">
     <ion-card-header>
-      Cantidad de usuarios por Medalla
+      Ranking Usuarios con mas visitas a paises
     </ion-card-header>
     <ion-card-content>
       <canvas #lineCanvas style="position: relative; height:20vh; width:40vw"></canvas>
