--- a/src/app/listar-contactos/listar-contactos.page.html
+++ b/src/app/listar-contactos/listar-contactos.page.html
@@ -11,19 +11,43 @@
             <ion-searchbar  class="listaUsuarios" autocomplete="on" placeholder="Buscar contactos" slot="primary" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
             <ion-item-divider>
             </ion-item-divider>
-            <ion-list>
-              <ion-item *ngFor="let usuario of usuarios" >
-                <div style="display: flex; justify-content: center;">
-                  <ion-avatar>
-                    <img [src]="usuario.imagenPerfil">
-                  </ion-avatar>
-                </div>
-                {{ usuario.nombre }} {{ usuario.apellido }}
-                <ion-button (click)="onViewProfile(usuario.idPersona)">
-                  <ion-icon name="trash" slot="icon-only" ></ion-icon>
-                </ion-button>
-              </ion-item>
-            </ion-list>
+            <ion-card>
+              <ion-card-content>
+                <ion-content style="height: 500px;">
+                  <ion-list >
+                    <ion-row>
+                      <ion-col size-xs="12">
+                        <ion-item *ngFor="let contacto of contactos">
+                          <div style="display: flex; justify-content: center;" class="ion-margin">
+                            <ion-avatar>
+                              <img [src]="contacto.imagenPerfil">
+                            </ion-avatar>
+                          </div>
+                          <ion-col size="6">
+                            <ion-label>{{ contacto.nickname }} <br> {{ contacto.nombre }} {{ contacto.apellido }}</ion-label>
+                          </ion-col>
+                          <div class="extraInfo">
+                            <ion-col>
+                              <ion-label>{{ contacto.email }} <br> {{ contacto.direccion }}</ion-label>
+                            </ion-col>
+                          </div>
+                          <ion-button style="justify-self: end;" (click)="onViewProfile(contacto.idPersona)">
+                            <ion-icon name="person-outline" slot="icon-only" ></ion-icon>
+                          </ion-button>
+                        </ion-item>
+                      </ion-col>
+                    </ion-row>
+                    </ion-list>
+                    <ion-infinite-scroll threshold="15%" (ionInfinite)="getContactos($event)">
+                      <ion-infinite-scroll-content
+                        id="null"
+                        loadingSpinner="bubbles"
+                        loadingText="Cargando más contactos...">
+                      </ion-infinite-scroll-content>
+                    </ion-infinite-scroll>
+                </ion-content>
+              </ion-card-content>
+            </ion-card>
           </ion-card-content>
         </ion-card>
       </ion-col>
